packages/ui/src/components/Layout/LayoutPage.sass
@import '../../styles/common'

.#{$cui-conf-globalPrefix}layout-page
	align-items: stretch
	background-color: inherit
	display: flex
	flex-direction: column
	flex-grow: 1
	justify-content: flex-start

	&-content-wrap
		background-color: var(--cui-background-color)
		display: flex
		flex-basis: 100%
		flex-direction: column
		position: relative
		z-index: 1
	&-content
		display: flex
		flex-direction: row
		flex: 1
		overflow-x: auto
		overflow-y: visible
		padding-top: var(--cui-layout-page-padding-top)
		padding-left: var(--cui-layout-page-padding-left)
		padding-right: var(--cui-layout-page-padding-right)
		padding-bottom: var(--cui-layout-page-padding-bottom)
		transition: border-color var(--cui-transition-duration)
		&:not(:last-child)
			padding-right: var(--cui-layout-section-padding-right)
	&-content-container
		display: flex
		flex-direction: column
		flex-grow: 1
		gap: var(--cui-layout-section-gap)
	&-aside
		background-color: var(--cui-background-color--above)
		border-radius: unset
		border-top: 1px solid var(--cui-color--lower)
		display: flex
		flex-direction: column
		margin-top: calc(-1 * var(--cui-control-border-width))
		overflow: visible
		&-title
			margin: 0
		&-content
			padding-bottom: var(--cui-layout-section-padding-bottom)
			padding-left: var(--cui-layout-page-padding-left)
			padding-right: var(--cui-layout-page-padding-right)
			padding-top: var(--cui-layout-section-padding-top)

	@media (min-width: $breakpoint-min-large)
		&-content-container
			flex-grow: unset
			margin-left: auto
			margin-right: auto
			flex-basis: $breakpoint-min-medium
	@media (min-width: $breakpoint-min-xlarge)
		height: 100vh
		max-height: 100vh
		&-content-wrap
			flex-direction: row
			overflow: hidden
		&-content
			border-right: 1px solid transparent
			overflow-y: auto
			&.is-overflowing
				border-right-color: var(--cui-color--lower)
		&-aside
			background-color: unset
			border-top: unset
			margin-top: unset
			max-width: 50%
			overflow-y: auto
			position: sticky
			top: 0
			&-content
				padding-left: var(--cui-layout-section-padding-left)


@media (min-width: $breakpoint-min-xlarge)
	html
		height: 100vh
		margin: 0
		padding: 0

